--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ h1{
 }
 .plan p{
     margin-left:10px;
+    opacity:0.6;
 }
 .plan a{
     margin:0 0 0 30px;
@@ -91,6 +92,9 @@ button{
 }
 .cancel{
     padding-bottom:30px;
+}
+.cancel button{
+    background-color:#FFFFFF;
 }
 .cancel p{
     color:#6D7792;
